# ansible-inspec

./: .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER-COMPOSE-QUICKSTART.md  DOCKERFILE-SERVER-REVIEW.md  Dockerfile  Dockerfile.server  FIXES-APPLIED.md  HELM-PUBLICATION-COMPLETE.md  HELM-WORKFLOW-FIX.md  IMPLEMENTATION-COMPLETE.md  MIGRATION-v0.2.0.md  Makefile  PROJECT-SUMMARY.md  PUBLICATION-READY.md  PUBLISHING-CHECKLIST.md  PUBLISHING-IMPROVEMENTS.md  PUBLISHING-SETUP.md  QUICKSTART-AUTH.md  QUICKSTART.md  README.md  RELEASE-SUMMARY.md  SUPERMARKET-IMPLEMENTATION.md  TEST-PASSWORD-AUTH-SUMMARY.md  TESTING.md  VALIDATION-REPORT.md  VERSION-UPDATE-SUMMARY.md  debug_inspec.py  docker-compose.yml  index.html  pyproject.toml  pytest.ini  schema.prisma
.github/: HELM-AUTOMATION.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-server.yml  docker.yml  helm-lint.yml  publish.yml  release-helm.yml  tests.yml
data/job_templates/: 984f5b81-9c57-49c2-ad7e-52e12eb84092.json  chef-supermarket-linux-baseline.json  local-inspec-profile.json  ssl-cert-demo-template-001.json
docs/: API.md  DOCKER-DEPLOYMENT.md  GETTING-STARTED-PRISMA.md  PRISMA-MIGRATION.md  PRISMA-QUICKREF.md  PUBLISHING-READY.md  PUBLISHING.md  REPORTER-ANALYSIS.md  SERVER.md  getting-started.md
examples/: README.md  ansible-inspec-api.postman_collection.json  convert_profile.sh  env-vars-formats.md  multi_profile_test.sh  supermarket_demo.py
examples/playbooks/: README.md  demo_compliance.yml  ssl_certificate_demo.yml  web_server_compliance.yml
examples/profiles/basic-compliance/: README.md
examples/profiles/custom-compliance/: README.md
github-issues/: README.md
helm/: PUBLISHING.md  README.md  ansible-inspec-0.2.10.tgz  ansible-inspec-0.2.11.tgz  ansible-inspec-0.2.12.tgz  ansible-inspec-0.2.13.tgz  ansible-inspec-0.2.14.tgz  ansible-inspec-0.2.15.tgz  ansible-inspec-0.2.16.tgz  ansible-inspec-0.2.17.tgz  ansible-inspec-0.2.6.tgz  ansible-inspec-0.2.7.tgz  ansible-inspec-0.2.8.tgz  ansible-inspec-0.2.9.tgz  artifacthub-repo.yml  index.yaml  my-values.yaml.example
helm/ansible-inspec/: .gitignore  .helmignore  Chart.yaml  README.md  values.yaml
helm/ansible-inspec/charts/: postgresql-18.2.9.tgz
helm/ansible-inspec/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-streamlit.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml  service-streamlit.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
lib/ansible_inspec/: __init__.py  cli.py  converter.py
lib/ansible_inspec/ansible_adapter/: __init__.py
lib/ansible_inspec/core/: __init__.py
lib/ansible_inspec/inspec_adapter/: __init__.py
lib/ansible_inspec/server/: __init__.py  api.py  api_old.py  config.py  encryption.py  executor.py  models.py  monitoring.py  storage.py  (+1 more)
profiles/: README.md
profiles/my-profile/: inspec.yml
scripts/: README.md  generate_encryption_key.py  init_alembic.py  init_prisma.py  pre-publish-verify.py  test_api.py
tests/: conftest.py  test_converter.py  test_server_api.py  test_server_integration.py  test_server_models.py
(+17 files in other folders)
