[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-inspec"
version = "0.2.10"
description = "Compliance testing with Ansible and InSpec integration"
readme = "README.md"
authors = [
    {name = "Htunn Thu Thu"}
]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]
keywords = ["ansible", "inspec", "compliance", "testing", "infrastructure", "security", "automation"]
requires-python = ">=3.8"
dependencies = [
    "ansible-core>=2.15.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    # Authentication
    "msal>=1.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    # Database (Prisma ORM)
    "prisma>=0.15.0",
    # VCS
    "gitpython>=3.1.40",
    "apscheduler>=3.10.0",
    # Utilities
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
]
enterprise = [
    "python3-saml>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/Htunn/ansible-inspec"
Documentation = "https://github.com/Htunn/ansible-inspec#readme"
Repository = "https://github.com/Htunn/ansible-inspec"
Issues = "https://github.com/Htunn/ansible-inspec/issues"
Changelog = "https://github.com/Htunn/ansible-inspec/blob/main/CHANGELOG.md"
"Docker Hub" = "https://hub.docker.com/r/htunnthuthu/ansible-inspec"

[project.scripts]
ansible-inspec = "ansible_inspec.cli:main"

[tool.setuptools]
package-dir = {"" = "lib"}

[tool.setuptools.packages.find]
where = ["lib"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=ansible_inspec --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
